# django-2-Alfarabi09

./: db.sqlite3  pyproject.toml
mysite/: settings.py  urls.py
news/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_comment.py
news/templates/news/: add_news.html  news_detail.html  news_list.html
