[tool.poetry]
name = "django-2-alfarabi09"
version = "0.1.0"
description = ""
authors = ["Alfarabi09 <fara2001@mail.ru>"]
readme = "README.md"
packages = [{include = "django_2_alfarabi09"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
